arreglando reporte y agregando columnas

--- a/www/views/regform/form3.twig
+++ b/www/views/regform/form3.twig
@@ -89,6 +89,14 @@
       <option>USADO</option>
     </select>
   </div>
+  <div class="form-group col-md-6">
+    <label for="inputEmail4">Fecha de  fabricación</label>
+    <input type="mar" class="form-control" id="fecha_fab">
+  </div>
+  <div class="form-group col-md-6">
+    <label for="inputEmail4">Fecha de reparación</label>
+    <input type="mar" class="form-control" id="fecha_rep">
+  </div>
   </div>
   </div>
   <button type="button" class="btn btn-danger cancelar">Cancelar</button>
