--- a/www/views/modals/editar.twig
+++ b/www/views/modals/editar.twig
@@ -186,6 +186,14 @@
         <option>ALMACEN</option>
       </select>
     </div>
+    <div class="form-group">
+      <label for="exampleInputEmail1">fecha de fabricación</label>
+      <input type="text" name="f_fab" value="{{all.f_fab}}" class="form-control" id="fecha_fab">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputEmail1">fecha de reparación</label>
+      <input type="text" name="f_rep" value="{{all.f_rep}}" class="form-control" id="fecha_rep">
+    </div>
     <input type="hidden" name="id" value="{{all.id}}">
   </form>
 </div>
