--- a/www/views/modals/verm.twig
+++ b/www/views/modals/verm.twig
@@ -86,6 +86,14 @@
       <label for="exampleInputEmail1">Estado</label>
       <input type="text" value="{{all.condiciones}}" class="form-control" id="fecha" disabled>
     </div>
+    <div class="form-group">
+      <label for="exampleInputEmail1">fecha de fabricación</label>
+      <input type="text" value="{{all.f_fab}}" class="form-control" id="fecha" disabled>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputEmail1">fecha de reparación</label>
+      <input type="text" value="{{all.f_rep}}" class="form-control" id="fecha" disabled>
+    </div>
   </form>
 </div>
 <div class="modal-footer">
