--- a/www/views/regform/form2.twig
+++ b/www/views/regform/form2.twig
@@ -98,6 +98,14 @@
     </select>
   </div>
   <div class="form-group col-md-6">
+    <label for="inputEmail4">Fecha de  fabricación(mes/año)</label>
+    <input type="mar" class="form-control" id="fecha_fab">
+  </div>
+  <div class="form-group col-md-6">
+    <label for="inputEmail4">Fecha de reparación(mes/año)</label>
+    <input type="mar" class="form-control" id="fecha_rep">
+  </div>
+  <div class="form-group col-md-6">
   </div>
   <button type="button" class="btn btn-danger cancelar">Cancelar</button>
   <button id="siguiente2" type="button" class="btn btn-success">Siguiente</button>
