--- a/www/views/regform/form3.twig
+++ b/www/views/regform/form3.twig
@@ -90,11 +90,11 @@
     </select>
   </div>
   <div class="form-group col-md-6">
-    <label for="inputEmail4">Fecha de  fabricación</label>
+    <label for="inputEmail4">Fecha de  fabricación(mes/año)</label>
     <input type="mar" class="form-control" id="fecha_fab">
   </div>
   <div class="form-group col-md-6">
-    <label for="inputEmail4">Fecha de reparación</label>
+    <label for="inputEmail4">Fecha de reparación(mes/año)</label>
     <input type="mar" class="form-control" id="fecha_rep">
   </div>
   </div>
