--- a/www/views/modals/editar.twig
+++ b/www/views/modals/editar.twig
@@ -185,7 +185,7 @@
         <input type="text" value="{{all.clavedan}}" class="form-control" name="clavedan">
       </div>
       <div class="form-group">
-        <label for="exampleInputEmail1">Estado</label>
+        <label for="exampleInputEmail1">disposicion</label>
         <select class="form-control" id="disposicion" name="disposicion">
           <option selected>{{all.condiciones}}</option>
           <option>CHATARRA</option>
