--- a/www/views/modals/verm.twig
+++ b/www/views/modals/verm.twig
@@ -81,6 +81,10 @@
         <label for="exampleInputEmail1">Clave del daño</label>
         <input type="text" value="{{all.clavedan}}" class="form-control" id="fecha" disabled>
       </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Taller de reparación</label>
+        <input type="text" value="{{all.taller}}" class="form-control" id="taller" disabled>
+      </div>
     {% endif %}
     <div class="form-group">
       <label for="exampleInputEmail1">Estado</label>
