--- a/www/views/regform/form2.twig
+++ b/www/views/regform/form2.twig
@@ -106,6 +106,10 @@
     <input type="mar" class="form-control" id="fecha_rep">
   </div>
   <div class="form-group col-md-6">
+    <label for="inputEmail4">Taller de reparación</label>
+    <input type="mar" class="form-control" id="taller">
+  </div>
+  <div class="form-group col-md-6">
   </div>
   <button type="button" class="btn btn-danger cancelar">Cancelar</button>
   <button id="siguiente2" type="button" class="btn btn-success">Siguiente</button>
