--- a/www/views/modals/editar.twig
+++ b/www/views/modals/editar.twig
@@ -193,6 +193,10 @@
           <option>ALMACEN</option>
         </select>
       </div>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Taller de reparación</label>
+        <input type="text" value="{{all.taller}}" class="form-control" name="taller">
+      </div>
     {% endif %}
     <div class="form-group">
       <label for="exampleInputEmail1">fecha de fabricación</label>
